// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Process JSON nodes correctly coerces an id field to always be a String 1`] = `
Array [
  Array [
    Object {
      "blue": true,
      "children": Array [],
      "funny": "yup",
      "id": "12345",
      "internal": Object {
        "contentDigest": "contentDigest",
        "type": "FooJson",
      },
      "parent": "whatever",
    },
  ],
]
`;

exports[`Process JSON nodes correctly coerces an id field to always be a String 2`] = `
Array [
  Array [
    Object {
      "child": Object {
        "blue": true,
        "children": Array [],
        "funny": "yup",
        "id": "12345",
        "internal": Object {
          "contentDigest": "contentDigest",
          "type": "FooJson",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "children": Array [],
        "content": "{\\"id\\":12345,\\"blue\\":true,\\"funny\\":\\"yup\\"}",
        "dir": "<TEMP_DIR>/foo/",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "application/json",
          "type": "File",
        },
        "name": "nodeName",
        "parent": null,
      },
    },
  ],
]
`;

exports[`Process JSON nodes correctly correctly creates a node from JSON which is a single object 1`] = `
Array [
  Array [
    Object {
      "blue": true,
      "children": Array [],
      "funny": "yup",
      "id": "foo",
      "internal": Object {
        "contentDigest": "contentDigest",
        "type": "FooJson",
      },
      "parent": "whatever",
    },
  ],
]
`;

exports[`Process JSON nodes correctly correctly creates a node from JSON which is a single object 2`] = `
Array [
  Array [
    Object {
      "child": Object {
        "blue": true,
        "children": Array [],
        "funny": "yup",
        "id": "foo",
        "internal": Object {
          "contentDigest": "contentDigest",
          "type": "FooJson",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "children": Array [],
        "content": "{\\"id\\":\\"foo\\",\\"blue\\":true,\\"funny\\":\\"yup\\"}",
        "dir": "<TEMP_DIR>/foo/",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "application/json",
          "type": "File",
        },
        "name": "nodeName",
        "parent": null,
      },
    },
  ],
]
`;

exports[`Process JSON nodes correctly correctly creates a node from JSON which is a single object and doesn't come from fs 1`] = `
Array [
  Array [
    Object {
      "blue": true,
      "children": Array [],
      "funny": "yup",
      "id": "foo",
      "internal": Object {
        "contentDigest": "contentDigest",
        "type": "NotFileJson",
      },
      "parent": "whatever",
    },
  ],
]
`;

exports[`Process JSON nodes correctly correctly creates a node from JSON which is a single object and doesn't come from fs 2`] = `
Array [
  Array [
    Object {
      "child": Object {
        "blue": true,
        "children": Array [],
        "funny": "yup",
        "id": "foo",
        "internal": Object {
          "contentDigest": "contentDigest",
          "type": "NotFileJson",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "children": Array [],
        "content": "{\\"id\\":\\"foo\\",\\"blue\\":true,\\"funny\\":\\"yup\\"}",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "application/json",
          "type": "NotFile",
        },
        "parent": null,
      },
    },
  ],
]
`;

exports[`Process JSON nodes correctly correctly creates nodes from JSON which is an array of objects 1`] = `
Array [
  Array [
    Object {
      "blue": true,
      "children": Array [],
      "funny": "yup",
      "id": "foo",
      "internal": Object {
        "contentDigest": "contentDigest",
        "type": "NodeNameJson",
      },
      "parent": "whatever",
    },
  ],
  Array [
    Object {
      "blue": false,
      "children": Array [],
      "funny": "nope",
      "id": "uuid-from-gatsby",
      "internal": Object {
        "contentDigest": "contentDigest",
        "type": "NodeNameJson",
      },
      "parent": "whatever",
    },
  ],
]
`;

exports[`Process JSON nodes correctly correctly creates nodes from JSON which is an array of objects 2`] = `
Array [
  Array [
    Object {
      "child": Object {
        "blue": true,
        "children": Array [],
        "funny": "yup",
        "id": "foo",
        "internal": Object {
          "contentDigest": "contentDigest",
          "type": "NodeNameJson",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "children": Array [],
        "content": "[{\\"id\\":\\"foo\\",\\"blue\\":true,\\"funny\\":\\"yup\\"},{\\"blue\\":false,\\"funny\\":\\"nope\\"}]",
        "dir": "<TEMP_DIR>/foo/",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "application/json",
          "type": "File",
        },
        "name": "nodeName",
        "parent": null,
      },
    },
  ],
  Array [
    Object {
      "child": Object {
        "blue": false,
        "children": Array [],
        "funny": "nope",
        "id": "uuid-from-gatsby",
        "internal": Object {
          "contentDigest": "contentDigest",
          "type": "NodeNameJson",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "children": Array [],
        "content": "[{\\"id\\":\\"foo\\",\\"blue\\":true,\\"funny\\":\\"yup\\"},{\\"blue\\":false,\\"funny\\":\\"nope\\"}]",
        "dir": "<TEMP_DIR>/foo/",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "application/json",
          "type": "File",
        },
        "name": "nodeName",
        "parent": null,
      },
    },
  ],
]
`;

exports[`Process JSON nodes correctly correctly creates nodes from JSON which is an array of objects and doesn't come from fs 1`] = `
Array [
  Array [
    Object {
      "blue": true,
      "children": Array [],
      "funny": "yup",
      "id": "foo",
      "internal": Object {
        "contentDigest": "contentDigest",
        "type": "NotFileJson",
      },
      "parent": "whatever",
    },
  ],
  Array [
    Object {
      "blue": false,
      "children": Array [],
      "funny": "nope",
      "id": "uuid-from-gatsby",
      "internal": Object {
        "contentDigest": "contentDigest",
        "type": "NotFileJson",
      },
      "parent": "whatever",
    },
  ],
]
`;

exports[`Process JSON nodes correctly correctly creates nodes from JSON which is an array of objects and doesn't come from fs 2`] = `
Array [
  Array [
    Object {
      "child": Object {
        "blue": true,
        "children": Array [],
        "funny": "yup",
        "id": "foo",
        "internal": Object {
          "contentDigest": "contentDigest",
          "type": "NotFileJson",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "children": Array [],
        "content": "[{\\"id\\":\\"foo\\",\\"blue\\":true,\\"funny\\":\\"yup\\"},{\\"blue\\":false,\\"funny\\":\\"nope\\"}]",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "application/json",
          "type": "NotFile",
        },
        "parent": null,
      },
    },
  ],
  Array [
    Object {
      "child": Object {
        "blue": false,
        "children": Array [],
        "funny": "nope",
        "id": "uuid-from-gatsby",
        "internal": Object {
          "contentDigest": "contentDigest",
          "type": "NotFileJson",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "children": Array [],
        "content": "[{\\"id\\":\\"foo\\",\\"blue\\":true,\\"funny\\":\\"yup\\"},{\\"blue\\":false,\\"funny\\":\\"nope\\"}]",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "application/json",
          "type": "NotFile",
        },
        "parent": null,
      },
    },
  ],
]
`;
